--- a/EntityFrameworkApp/EntityFrameworkApp.csproj
+++ b/EntityFrameworkApp/EntityFrameworkApp.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>202408241736320_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Model\Address.cs" />
     <Compile Include="Model\Student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
