--- a/EntityFrameworkApp/EntityFrameworkApp.csproj
+++ b/EntityFrameworkApp/EntityFrameworkApp.csproj
@@ -98,6 +98,10 @@
     <Compile Include="Migrations\202408251504224_Initial2.Designer.cs">
       <DependentUpon>202408251504224_Initial2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202408251721214_Initial3.cs" />
+    <Compile Include="Migrations\202408251721214_Initial3.Designer.cs">
+      <DependentUpon>202408251721214_Initial3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Address.cs" />
     <Compile Include="Model\Student.cs" />
@@ -115,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202408251504224_Initial2.resx">
       <DependentUpon>202408251504224_Initial2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202408251721214_Initial3.resx">
+      <DependentUpon>202408251721214_Initial3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
