--- a/EntityFrameworkApp/EntityFrameworkApp.csproj
+++ b/EntityFrameworkApp/EntityFrameworkApp.csproj
@@ -85,7 +85,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Implementations\StudentRepository.cs" />
+    <Compile Include="Implementations\AddressImplement.cs" />
+    <Compile Include="Implementations\StudentImplement.cs" />
+    <Compile Include="Interfaces\IAddress.cs" />
     <Compile Include="Migrations\202408241736320_Initial.cs" />
     <Compile Include="Migrations\202408241736320_Initial.Designer.cs">
       <DependentUpon>202408241736320_Initial.cs</DependentUpon>
